force-app/main/default/objects/Unbounce_Field_Mapping__c/Unbounce_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Unbounce payload transformation rules (JSON template). Use $.path to reference incoming fields. Independent of Shulman API Custom_Mapping__c.</description>
    <label>Unbounce Field Mapping</label>
    <nameField>
        <displayFormat>UFM-{0000000}</displayFormat>
        <label>Unbounce Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unbounce Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>