force-app/main/default/objects/Unbounce_Field_Mapping__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Scope for this mapping. Use Unbounce Intake for web-form payloads processed by the Unbounce Intake API.</description>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unbounce Intake</fullName>
                <default>true</default>
                <label>Unbounce Intake</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>