force-app/main/default/objects/Unbounce_Field_Mapping__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this mapping is applied to incoming Unbounce payloads for the given context.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>