force-app/main/default/objects/Unbounce_Field_Mapping__c/fields/Mapping_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Configuration__c</fullName>
    <description>JSON template that defines the desired payload shape. String values starting with $.path resolve from the incoming payload (e.g. $.email, $.data.first_name).</description>
    <inlineHelpText>JSON template for payload transformation. Use $.path.to.value to reference source fields.</inlineHelpText>
    <label>Mapping Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>